--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Varun Kumar
 description: AOS C111 Final Report
 logo: /assets/IMG/template_logo.png
 show_downloads: true
-theme: jekyll-theme-midnight
+theme: jekyll-theme-modernist
